# Arquitectura-de-computadoras-1

./: Acceso  CMakeLists.txt  README.md  main.c  menu.c
Acceso/: main.c
AutoFantastico/: main.c
Barra de carga/: main.c
Carrera/: main.c
Choque/: main.c
Pendulo/: CMakeLists.txt  Pendulo.s  main.c
Retardo/: Retardo.c
Sec. ADN 1/: main.c
Sec. ADN 2/: Secuencia ADN 2.c
